--- a/public/components/ui/espacios.css
+++ b/public/components/ui/espacios.css
@@ -1,14 +1,22 @@
+*{
+    box-sizing: border-box;
+}
 .mayor {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr;
 }
 
 .ayuda {
     width: 420px;
-    background: transparent;
+    background: rgb(54, 47, 47);
     color: rgb(233, 243, 244);
     border-radius: 10px;
     padding: 30px 40px;
+}
+
+.mayor .segunda {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 .ayuda .title {
@@ -16,15 +24,26 @@
     text-align: center;
     margin: 0px 0px 40px 0px;
 }
+
 .ayuda .sub {
-    font-size: 20px;
+    font-size: 21px;
+    color: #333;
 }
+
+.ayuda .cajas {
+    background-color: rgb(243, 231, 231);
+    border-radius: 10px;
+    padding: 20px 20px;
+    margin: 20px 0px;
+}
+
 .ayuda .input-box {
     position: relative;
     width: 100%;
     height: 50px;
-    margin: 30px 0;
+    margin: 10px 0;
 }
+
 /*   
  */
 .input-box input {
@@ -33,15 +52,16 @@
     background: transparent;
     border: none;
     outline: none;
-    border: 2px solid rgba(255, 255, 255, .2);
-    border-radius: 20px;
     font-size: 16px;
-    color: #fff;
-    padding: 20px 45px 20px 20px;
+    color: #040101;
 }
 
 .input-box input::placeholder {
-    color: #fff;
+    color: #534c4c;
+    text-align: right;
+    font-weight: bold;
+    /* border-bottom: 1px solid rgba(49, 55, 55, 0.523); */
+
 }
 
 .ayuda button {
@@ -51,7 +71,7 @@
     border: none;
     outline: none;
     border-radius: 20px;
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     font-size: 16px;
     color: #333;
