--- a/public/components/ui/espacios.css
+++ b/public/components/ui/espacios.css
@@ -12,6 +12,8 @@
     color: rgb(233, 243, 244);
     border-radius: 10px;
     padding: 30px 40px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .mayor .segunda {
