--- a/public/components/ui/grafico.css
+++ b/public/components/ui/grafico.css
@@ -1,8 +1,11 @@
 .grafico {
-    background: transparent;
+    width: 420px;
+    background: rgb(54, 47, 47);
     color: rgb(233, 243, 244);
     border-radius: 10px;
     padding: 30px 40px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .grafico .titulograf {
