--- a/public/components/ui/tabla.css
+++ b/public/components/ui/tabla.css
@@ -1,4 +1,14 @@
+.tab{
+    width: 420px;
+    background: rgb(54, 47, 47);
+    color: rgb(233, 243, 244);
+    border-radius: 10px;
+    padding: 30px 40px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
 .xd {
     color: rgb(18, 235, 221);
     text-align: center;
 }
+
