--- a/public/components/ui/tabla.css
+++ b/public/components/ui/tabla.css
@@ -11,4 +11,31 @@
     color: rgb(18, 235, 221);
     text-align: center;
 }
+.sub2 {
+    font-size: 21px;
+    margin: 10px 0px;
+}
+ .cajas {
+    color: black;
+    background-color: rgb(243, 231, 231);
+    border-radius: 10px;
+    padding: 20px 20px;
+    margin: 20px 0px;
+}
 
+.input-what {
+    color: black;
+    background-color: rgb(243, 231, 231);
+    border-radius: 10px;
+    padding: 20px 20px;
+    margin: 20px 0px;
+}
+.input-what input{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    color: #040101;
+}
