Funcion de agregar inputs

--- a/public/components/ui/espacios.css
+++ b/public/components/ui/espacios.css
@@ -18,7 +18,7 @@
 
 .mayor .segunda {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    /* align-items: center; */
 }
 
 .ayuda .title {
