--- a/public/components/ui/tabla.css
+++ b/public/components/ui/tabla.css
@@ -21,6 +21,7 @@
     font-size: 21px;
     margin: 10px 0px;
 }
+
  .cajas {
     color: black;
     background-color: rgb(243, 231, 231);
@@ -36,6 +37,10 @@
     padding: 20px 20px;
     margin: 20px 0px;
 }
+.cajitas {
+    display: grid;
+    grid-template-columns: 20% 80%;    
+}
 .input-what input{
     width: 100%;
     height: 100%;
@@ -44,4 +49,5 @@
     outline: none;
     font-size: 16px;
     color: #040101;
+    /* border-bottom: 1px solid rgba(49, 55, 55, 0.523); */
 }
