--- a/public/components/ui/espacios.css
+++ b/public/components/ui/espacios.css
@@ -7,7 +7,7 @@
 }
 
 .ayuda {
-    width: 420px;
+    /* width: 420px; */
     background: rgb(54, 47, 47);
     color: rgb(233, 243, 244);
     border-radius: 10px;
@@ -33,21 +33,28 @@
 }
 
 .ayuda .cajas {
+    height: 150px;
     background-color: rgb(243, 231, 231);
     border-radius: 10px;
     padding: 20px 20px;
     margin: 20px 0px;
 }
+.count {
+    text-align: center;
+}
 
 .ayuda .input-box {
-    position: relative;
+    /* position: relative; */
     width: 100%;
     height: 50px;
     margin: 10px 0;
 }
 
-/*   
- */
+.botones {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 10px;
+}
 .input-box input {
     width: 100%;
     height: 100%;
@@ -69,7 +76,7 @@
 .ayuda button {
     width: 100%;
     height: 50px;
-    background: #34eeff;
+    background: rgb(177, 174, 174);
     border: none;
     outline: none;
     border-radius: 20px;
