--- a/public/components/ui/proceso.css
+++ b/public/components/ui/proceso.css
@@ -1,7 +1,7 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap'); */
 
 .proceso{
-    height: 150px;
+    height: 100%;
     background-color: rgb(54, 47, 47);
     border-radius: 10px;
     padding: 20px 20px;
@@ -15,4 +15,8 @@
     font-size: 30px;
     font-weight: 800;
     padding: 30px 0px;
+}
+
+.error {
+    color: rgb(222, 74, 29);
 }
