--- a/public/components/ui/proceso.css
+++ b/public/components/ui/proceso.css
@@ -20,3 +20,30 @@
 .error {
     color: rgb(222, 74, 29);
 }
+
+.matrices {
+    display: grid;
+    grid-template-columns:  1fr 1fr 1fr;
+    grid-column-gap: 30px; 
+}
+.nomatrices {
+    color: black;
+    background-color: rgb(243, 231, 231);
+    border-radius: 10px;
+    padding: 20px 20px;
+    margin: 20px 0px;
+}
+
+/* proceso.css */
+.matrix-table {
+    display: flex;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.cell {
+  flex: 1;
+border: 1px solid #000;
+  padding: 8px;
+  text-align: center;
+}
