--- a/public/components/ui/header.css
+++ b/public/components/ui/header.css
@@ -1,9 +1,36 @@
+.Barraza {
+    margin-top: 20px;
+    display: grid;
+    place-items: center;
+}
+.principal{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    display: grid;
+    justify-content: center;
+    margin-top: 20px;
+    min-height: 10vh;
+    align-items: center;
+}
 
-.titulo {
-    color: aliceblue;
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
-    font-size: 40px;
-    font-weight: 800;
-    padding: 30px 0px;
+nav {
+    position: relative;
+    width: 600px;
+    height: 50px;
+    background: #222;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+nav a {
+    position: relative;
+    display: inline-block;
+    font-size: 1em;
+    font-weight: 500;
+    color: #fff;
+    text-decoration: none;
+    padding: 0 23px;
 }
