--- a/public/components/ui/proceso.css
+++ b/public/components/ui/proceso.css
@@ -4,7 +4,10 @@
     background-color: rgb(54, 47, 47);
     border-radius: 10px;
     padding: 20px 20px;
-    margin: 20px 10px;
+    /* margin: 20px 10px; */
+    height: 485px;
+    width: 1230px;
+    overflow: auto;
 }
 
 .titu {
