--- a/public/components/ui/espacios.css
+++ b/public/components/ui/espacios.css
@@ -8,7 +8,10 @@
 }
 
 .ayuda {
-    background: rgb(54, 47, 47);
+    /* background: rgb(54, 47, 47); */
+    background: linear-gradient(135deg, #22202053, #17141483);
+    border: 2px solid #6c65774d;
+    backdrop-filter: blur(10px);
     color: rgb(233, 243, 244);
     border-radius: 10px;
     padding: 30px 40px;
@@ -28,12 +31,14 @@
 
 .ayuda .sub {
     font-size: 21px;
-    color: #333;
+    color: #fff;
 }
 
 .ayuda .cajas {
     height: 150px;
-    background-color: rgb(243, 231, 231);
+    /* background-color: rgb(243, 231, 231); */
+    background: transparent;
+    border: 2px solid #6c65774d;
     border-radius: 10px;
     padding: 20px 20px;
     margin: 20px 0px;
@@ -62,7 +67,7 @@
     border: none;
     outline: none;
     font-size: 16px;
-    color: #040101;
+    color: #e9dede;
 }
 
 .input-box input::placeholder {
@@ -74,13 +79,20 @@
 .ayuda button {
     width: 100%;
     height: 50px;
-    background: rgb(177, 174, 174);
-    border: none;
+    /* background: rgb(177, 174, 174); */
+    background: transparent;
+    border: 2px solid #6c65774d;
+    /* backdrop-filter: blur(10px); */
+    border: 2px solid rgba(199, 194, 194, 0.841);
     outline: none;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     font-size: 16px;
-    color: #333;
+    color: #f7f7f7;
     font-weight: 700;
+}
+
+.count {
+    color: #fff
 }
