--- a/public/components/ui/grafico.css
+++ b/public/components/ui/grafico.css
@@ -1,5 +1,8 @@
 .grafico {
-    background: rgb(54, 47, 47);
+    /* background: rgb(54, 47, 47); */
+    background: linear-gradient(135deg, #22202053, #17141483);
+    border: 2px solid #6c65774d;
+    backdrop-filter: blur(10px);
     color: rgb(255, 255, 255);
     border-radius: 10px;
     padding: 30px 40px;
