--- a/public/components/ui/proceso.css
+++ b/public/components/ui/proceso.css
@@ -1,7 +1,10 @@
 
 .proceso{
     height: 100%;
-    background-color: rgb(54, 47, 47);
+    /* background-color: rgb(54, 47, 47); */
+    background: linear-gradient(135deg, #22202053, #17141483);
+    border: 2px solid #6c65774d;
+    backdrop-filter: blur(10px);
     border-radius: 10px;
     padding: 20px 20px;
     /* margin: 20px 10px; */
