--- a/public/components/dual/Dual.css
+++ b/public/components/dual/Dual.css
@@ -31,7 +31,7 @@
     grid-template-columns:  1fr 1fr 1fr;
     grid-column-gap: 30px; 
 }
-.nomatrices {
+.pasos {
     color: black;
     background-color: rgb(243, 231, 231);
     border-radius: 10px;
