--- a/public/components/ui/planteamiento.css
+++ b/public/components/ui/planteamiento.css
@@ -1,4 +1,4 @@
-.tab{
+.Subentorno{
     display: grid;
     grid-column-gap: 30px;
     width: 800px;
@@ -11,20 +11,20 @@
     height: 485px;
     margin-left: 10px;
     margin-right: 10px;
-    overflow: auto;
+    padding: 30px 40px;
 }
-.xd {
+.subTitulo {
     color: rgb(222, 230, 229);
     text-align: center;
 }
-.tablitas {
+.Scrollspace {
+    overflow: auto;
+}
+.tablas {
     display: grid;
     grid-template-columns:  1fr 1fr;
     grid-column-gap: 30px;  
    
-}
-.Tabla {
-    padding: 30px 40px;
 }
 .sub2 {
     font-size: 21px;
@@ -32,15 +32,8 @@
     color: #000
 }
 
- .cajas {
-    color: black;
-    background-color: rgb(126, 88, 88);
-    border-radius: 10px;
-    padding: 20px 20px;
-    margin: 20px 0px;
-}
 
-.input-what {
+.cajaInfo {
     color: black;
     background-color: rgb(243, 231, 231);
     border-radius: 10px;
@@ -51,7 +44,7 @@
     display: grid;
     grid-template-columns: 20% 80%;    
 }
-.input-what input{
+.cajaInfo input{
     width: 100%;
     height: 100%;
     background: transparent;
