--- a/public/components/ui/selector.css
+++ b/public/components/ui/selector.css
@@ -1,9 +1,4 @@
-.Barraza {
-    margin-top: 20px;
-    display: grid;
-    place-items: center;
-}
-.principal{
+.espacio{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -15,6 +10,11 @@
     /* background: rgb(24, 25, 24); */
 }
 
+.Links {
+    margin-top: 20px;
+    display: grid;
+    place-items: center;
+}
 nav {
     position: relative;
     width: 600px;
